apply plugin: 'com.android.application'

android {
    compileSdkVersion 27
    defaultConfig {
        applicationId "com.numericcal.androidsensors"
        minSdkVersion 21
        targetSdkVersion 27
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    // Configure only for each module that uses Java 8
    // language features (either in its source code or
    // through dependencies).
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    aaptOptions {
        noCompress "pb", "md", "tflite", "lite", "labels"
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.android.support:appcompat-v7:27.1.1'
    implementation 'com.android.support.constraint:constraint-layout:1.1.1'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'

    // reactive stuff
    implementation "io.reactivex.rxjava2:rxjava:2.1.14"
    implementation "com.github.akarnokd:rxjava2-extensions:0.19.2"
    implementation "io.reactivex.rxjava2:rxandroid:2.0.2"

    // UI stuff
    implementation "com.jakewharton:butterknife:8.8.1"
    annotationProcessor "com.jakewharton:butterknife-compiler:8.8.1"
    implementation "com.jakewharton.rxbinding2:rxbinding:2.1.1"

    // lifecycle
    implementation "com.uber.autodispose:autodispose:0.8.0"
    implementation "com.uber.autodispose:autodispose-android:0.8.0"
    implementation "com.uber.autodispose:autodispose-android-archcomponents:0.8.0"

    // deal with inconsistencies in camera across vendors
    implementation "io.fotoapparat.fotoapparat:library:2.2.0"
    implementation "io.fotoapparat.fotoapparat:adapter-rxjava2:2.2.0"

    // numericcal edge SDK for Android
    implementation "com.numericcal.edge:edge:0.11.2-beta"

    // permissions
    implementation "com.tbruyelle.rxpermissions2:rxpermissions:0.9.5@aar"
}
